# backend

./: CMakeLists.txt
src/: engine.cpp
src/comp/: art.cpp  art.h  cfg_compute.cpp  cfg_compute.h  computationset.cpp  computationset.h  edgearray.cpp  edgesToDelete.cpp  edgesToDelete.h  fptree.cpp  fptree.h  hashGraphStore.cpp  hashGraphStore.h  peg_compute.cpp  peg_compute.h  pegraph.cpp  pegraph.h  stmt.h
src/comp/array/: arraystomerge.cpp  arraystomerge.h
src/comp/list/: liststomerge.h
src/utility/eclat/tract/src/: tract.c
