cmake_minimum_required(VERSION 3.14)
project( backend1 )
set(CMAKE_CXX_STANDARD 14)
LINK_LIBRARIES(pthread)
aux_source_directory(./src sourceList1 )
aux_source_directory(./src/comp sourceList2)
aux_source_directory(./src/preproc sourceList3)
aux_source_directory(./src/common sourceList4)
aux_source_directory(./src/comp/array sourceList5)
aux_source_directory(./src/comp/list sourceList6)
aux_source_directory(./src/utility sourceList7)
#add_executable( backend1 ${sourceList1} ${sourceList2} ${sourceList3} ${sourceList4} ${sourceList5} ${sourceList6} src/comp/EdgeArrayMap.cpp src/comp/EdgeArrayMap.h)
add_executable( backend1 ${sourceList1} ${sourceList2} ${sourceList3} ${sourceList4} ${sourceList5} ${sourceList6} ${sourceList7} src/comp/FrequentItemsetStore.cpp src/comp/FrequentItemsetStore.h)