cmake_minimum_required(VERSION 3.14)
project( backend1 )
set(CMAKE_CXX_STANDARD 14)
LINK_LIBRARIES(pthread)

include_directories(src/utility/eclat/apriori/src)
include_directories(src/utility/eclat/eclat/src)
include_directories(src/utility/eclat/math/src)
include_directories(src/utility/eclat/tract/src)
include_directories(src/utility/eclat/util/src)

aux_source_directory(./src sourceList1 )
aux_source_directory(./src/comp sourceList2)
aux_source_directory(./src/preproc sourceList3)
aux_source_directory(./src/common sourceList4)
aux_source_directory(./src/comp/array sourceList5)
aux_source_directory(./src/comp/list sourceList6)
aux_source_directory(./src/utility sourceList7)
aux_source_directory(./src/utility/eclat/eclat/src sourceList8)
aux_source_directory(./src/utility/eclat/apriori/src sourceList9)
aux_source_directory(./src/utility/eclat/math/src sourceList10)
aux_source_directory(./src/utility/eclat/util/src sourceList11)
aux_source_directory(./src/utility/eclat/tract/src sourceList12)
#add_executable( backend1 ${sourceList1} ${sourceList2} ${sourceList3} ${sourceList4} ${sourceList5} ${sourceList6} src/comp/EdgeArrayMap.cpp src/comp/EdgeArrayMap.h)
add_executable( backend1 ${sourceList1} ${sourceList2} ${sourceList3} ${sourceList4} ${sourceList5} ${sourceList6} ${sourceList7} ${sourceList8} ${sourceList9} ${sourceList9} ${sourceList10} ${sourceList12} ${sourceList11} src/comp/FrequentItemsetStore.cpp src/comp/FrequentItemsetStore.h)